# C-cicd-lab-21

./: CMakeLists.txt
.github/workflows/: lint_test.yml
src/: utils.c  utils.h
tests/: test_utils.c
